<resources>

    <string name="app_name">Radio France</string>

    <string name="cast_application_id">CC1AD845</string>

    <string name="label_radios">Radios</string>
    <string name="label_preferences">Paramètres</string>

    <string name="action_search">Rechercher</string>
    <string name="action_retry">Réessayer</string>
    <string name="action_play">Lire</string>
    <string name="action_pause">Pause</string>
    <string name="action_play_pause">Lire/Pause</string>
    <string name="action_previous">Précédent</string>
    <string name="action_next">Suivant</string>
    <string name="action_stop_casting">Arrêter de caster</string>
    <string name="action_media_route">Lire sur…</string>
    <string name="action_preferences">Paramètres</string>

    <string name="error_service_unavailable">Service indisponible</string>
    <string name="error_action_unavailable">Action indisponible</string>
    <string name="error_radio_unavailable">Radio indisponible</string>
    <string name="error_occurred">Une erreur s\'est produite</string>

    <string name="search_hint">Rechercher radio…</string>

    <string name="empty_view_text">Aucune radio pour le moment</string>
    <string name="empty_view_description">Aucune radio disponible</string>

    <string name="text_no_result_text">Aucun résultat trouvé pour la recherche</string>

    <string name="image_radio_logo_description">Logo de la radio</string>
    <string name="button_radio_links_description">Liens de la radio</string>

    <string name="title_radio_website">Site Web</string>
    <string name="title_radio_facebook">Facebook</string>
    <string name="title_radio_twitter">Twitter</string>

    <string name="touch_to_cast">Touchez pour vous connecter à un appareil Google Cast</string>

    <string name="casting_to_device">Cast sur %1$s</string>

    <string name="preference_category_general">Général</string>
    <string name="preference_list_types_title">Affichage des radios</string>
    <string name="preference_list_types_summary">Choisir le type de liste utilisé pour afficher les radios</string>

    <string name="notification_channel">Lecture</string>

</resources>
