<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/image_radio_logo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/image_radio_logo_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_radio_play_pause"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/action_play_pause"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/button_radio_skip_next"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_play_arrow_pink_36dp" />

    <ImageButton
        android:id="@+id/button_radio_skip_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/action_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_skip_next_pink_36p" />

    <ImageButton
        android:id="@+id/button_radio_skip_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/action_previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/button_radio_play_pause"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_skip_previous_pink_36dp" />

    <TextView
        android:id="@+id/text_radio_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimaryText"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/text_radio_description"
        app:layout_constraintLeft_toRightOf="@+id/image_radio_logo"
        app:layout_constraintRight_toLeftOf="@+id/button_radio_skip_previous"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/text_radio_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAlignment="viewStart"
        android:textColor="@color/colorSecondaryText"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/image_radio_logo"
        app:layout_constraintRight_toLeftOf="@+id/button_radio_skip_previous"
        app:layout_constraintTop_toBottomOf="@+id/text_radio_title" />

</android.support.constraint.ConstraintLayout>
